# ts_review

./: ReadMe.md  pyproject.toml
tests/: conftest.py  test_api_data_to_csv.py  test_expirment.py  test_integration_main.py  test_transformation.py  test_utils.py
tests/resources/: tp_reviews.csv
ts_review/: api_server.py  main.py  transformation.py  utils.py
ts_review/api_data_to_csv/: api_data_to_csv.py
ts_review/api_resources/: test_tp_reviews.csv
ts_review/api_results/final_output.csv/: part-00000-872d705a-7059-4b16-828f-b3cd62378a61-c000.csv
ts_review/api_results/ingestion_date=2025-10-15/: part-00000-02b3994d-4a9b-48f8-9f7a-4f8bd0c1b23e.c000.snappy.parquet
ts_review/governance/: access_policy_map.py  data_policy_tags.py  pii_masking_rules.py
ts_review/schemas/: ts_raw_schema.py  ts_schema.py
ts_review/validation/expectations/: apply_expectations.py  ts_expectations.json
